--- a/package.json
+++ b/package.json
@@ -20,8 +20,11 @@
   "devDependencies": {
     "@types/node": "^20.11.25",
     "@vitejs/plugin-vue": "^5.0.4",
+    "autoprefixer": "^10.4.20",
     "npm-run-all": "^4.1.5",
+    "postcss": "^8.4.49",
     "sass": "^1.71.1",
+    "tailwindcss": "^3.4.15",
     "typescript": "^5.3.0",
     "vite": "^5.1.4",
     "vue-tsc": "^1.8.27"
